actually fix show member details on click on mobile i hope

--- a/codebase/static/css/memberList.css
+++ b/codebase/static/css/memberList.css
@@ -80,4 +80,11 @@
     width: 120px;
     height: 120px;
   }
+
+  .member:active > .member-details {
+    visibility: visible;
+    opacity: 1;
+    width: 120px;
+    height: 120px;
+  }
 }
